@@ -1,5 +1,6 @@
 package ru.practicum.repository;
 
+import org.assertj.core.api.AssertionsForInterfaceTypes;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -12,8 +13,6 @@ import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
-
 @DataJpaTest
 @ExtendWith(SpringExtension.class)
 class StatsRepositoryTest {
@@ -23,41 +22,42 @@ class StatsRepositoryTest {
 
     @BeforeEach
     public void setUp() {
-        EndpointHit hit1 = createEndpointHit("app1", "/uri1", "192.168.1.1", LocalDateTime.now().minusDays(1));
-        EndpointHit hit2 = createEndpointHit("app1", "/uri1", "192.168.1.2", LocalDateTime.now().minusDays(1));
-        EndpointHit hit3 = createEndpointHit("app2", "/uri2", "192.168.1.1", LocalDateTime.now().minusDays(2));
+        final EndpointHit hit1 = createEndpointHit("app1", "/uri1", "192.168.1.1", LocalDateTime.now().minusDays(1));
+        final EndpointHit hit2 = createEndpointHit("app1", "/uri1", "192.168.1.2", LocalDateTime.now().minusDays(1));
+        final EndpointHit hit3 = createEndpointHit("app2", "/uri2", "192.168.1.1", LocalDateTime.now().minusDays(2));
 
         statsRepository.saveAll(Arrays.asList(hit1, hit2, hit3));
     }
+
     @Test
     public void findUniqueStats_emptyUri_allTime() {
-        LocalDateTime start = LocalDateTime.now().minusYears(1);
-        LocalDateTime end = LocalDateTime.now().plusYears(1);
+        final LocalDateTime start = LocalDateTime.now().minusYears(1);
+        final LocalDateTime end = LocalDateTime.now().plusYears(1);
 
-        List<ViewStatsProjection> viewStatsProjections = statsRepository.findUniqueStats(start, end, null);
+        final List<ViewStatsProjection> viewStatsProjections = statsRepository.findUniqueStats(start, end, null);
 
-        assertThat(viewStatsProjections).size().isEqualTo(2);
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections).size().isEqualTo(2);
 
-        assertThat(viewStatsProjections.get(0).getHits()).isEqualTo(2);
-        assertThat(viewStatsProjections.get(0).getUri()).isEqualTo("/uri1");
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections.getFirst().getHits()).isEqualTo(2);
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections.getFirst().getUri()).isEqualTo("/uri1");
     }
 
     @Test
     public void findUniqueStats_withMultipleUri_allTime() {
-        LocalDateTime start = LocalDateTime.now().minusYears(1);
-        LocalDateTime end = LocalDateTime.now().plusYears(1);
-        List<String> uris = Arrays.asList("/uri1", "/uri2", "/uri3");
+        final LocalDateTime start = LocalDateTime.now().minusYears(1);
+        final LocalDateTime end = LocalDateTime.now().plusYears(1);
+        final List<String> uris = Arrays.asList("/uri1", "/uri2", "/uri3");
 
-        List<ViewStatsProjection> viewStatsProjections = statsRepository.findUniqueStats(start, end, uris);
+        final List<ViewStatsProjection> viewStatsProjections = statsRepository.findUniqueStats(start, end, uris);
 
-        assertThat(viewStatsProjections).size().isEqualTo(2);
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections).size().isEqualTo(2);
 
-        assertThat(viewStatsProjections.get(0).getHits()).isEqualTo(2);
-        assertThat(viewStatsProjections.get(1).getHits()).isEqualTo(1);
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections.get(0).getHits()).isEqualTo(2);
+        AssertionsForInterfaceTypes.assertThat(viewStatsProjections.get(1).getHits()).isEqualTo(1);
     }
 
-    private EndpointHit createEndpointHit(String app, String uri, String ip, LocalDateTime timestamp) {
-        EndpointHit endpointHit = new EndpointHit();
+    private EndpointHit createEndpointHit(final String app, final String uri, final String ip, final LocalDateTime timestamp) {
+        final EndpointHit endpointHit = new EndpointHit();
         endpointHit.setApp(app);
         endpointHit.setUri(uri);
         endpointHit.setIp(ip);
